--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,9 +3,9 @@
 <p><a href="https://github.com/41123145/cad2023">倉儲</a></p>
 <h1>進度</h1>
 <h2>W4</h2>
-<p>建立考試帳號</p>
-<p>利用replit把github更新並推送更新內容</p>
-<p>選用繪圖軟體(Solidworks)</p>
+<p>1.建立考試帳號及倉儲</p>
+<p>2.利用Replit啟動網站動態轉靜態並推送回Github更新內容</p>
+<p>3.使用繪圖軟體(Solidworks)<span>設計繪圖</span></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
