--- a/config/content.htm
+++ b/config/content.htm
@@ -6,6 +6,8 @@
 <p>1.建立考試帳號及倉儲</p>
 <p>2.利用Replit啟動網站動態轉靜態並推送回Github更新內容</p>
 <p>3.使用繪圖軟體(Solidworks)<span>設計繪圖</span></p>
+<h2><span>W5</span></h2>
+<p><span>學習CoppeliaSim</span></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
