--- a/content/W6.html
+++ b/content/W6.html
@@ -142,11 +142,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">進度 << <a href='進度.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>W4</h1>
-<p>1.建立考試帳號及倉儲</p>
-<p>2.利用Replit啟動網站動態轉靜態並推送回Github更新內容</p>
-<p>3.使用繪圖軟體(Solidworks)<span>設計繪圖</span></p>
-<br />進度 << <a href='進度.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
+    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>W6</h1>
+<p>進行9人分組<a href="https://41123120.github.io/cad2023_ag1/content/index.html">(ag1)</a></p>
+<p></p>
+<br />W5 << <a href='W5.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
