--- a/config/content.htm
+++ b/config/content.htm
@@ -10,7 +10,8 @@
 <p><span>學習CoppeliaSim</span></p>
 <h2><span>W6</span></h2>
 <p>進行9人分組<a href="https://41123120.github.io/cad2023_ag1/content/index.html">(ag1)</a></p>
-<p></p>
+<h2>W7</h2>
+<p><span>畫出3D可列印的零組件模型包含各個CAD套件以及繪圖完整過程影片</span></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
