--- a/content/W8.html
+++ b/content/W8.html
@@ -142,9 +142,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W7.html'>Next</a> >> W7<br /><h1>W6</h1>
-<p>進行9人分組<a href="https://41123120.github.io/cad2023_ag1/content/index.html">(ag1)</a></p>
-<br />W5 << <a href='W5.html'>Previous</a> <a href='W7.html'>Next</a> >> W7</div>
+    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>W8</h1>
+<p>維護網站</p>
+<p>1.localhost 透過 token, SSH 確定 git push 權限, SSH 設定可透過 Putty 完成</p>
+<p>2.Replit 透過 connect 功能連結與 Github 的權限</p>
+<p>3.自架主機 s1511.cycu.org, 透過 SSH 與分配埠號</p>
+<br />W7 << <a href='W7.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
