--- a/content/W7.html
+++ b/content/W7.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,9 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>W7</h1>
+    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='W8.html'>Next</a> >> W8<br /><h1>W7</h1>
 <p><span>畫出3D可列印的零組件模型包含各個CAD套件以及繪圖完整過程影片</span></p>
-<br />W6 << <a href='W6.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</div>
         
     <!-- footer -->
       <div class="container">
