--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -12,6 +12,11 @@
 <p>進行9人分組<a href="https://41123120.github.io/cad2023_ag1/content/index.html">(ag1)</a></p>
 <h2>W7</h2>
 <p><span>畫出3D可列印的零組件模型包含各個CAD套件以及繪圖完整過程影片</span></p>
+<h2><span>W8</span></h2>
+<p>維護網站</p>
+<p>1.localhost 透過 token, SSH 確定 git push 權限, SSH 設定可透過 Putty 完成</p>
+<p>2.Replit 透過 connect 功能連結與 Github 的權限</p>
+<p>3.自架主機 s1511.cycu.org, 透過 SSH 與分配埠號</p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
