--- a/content/磁力吸引.html
+++ b/content/磁力吸引.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,12 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引<br /><h1>W8</h1>
-<p>維護網站</p>
-<p>1.localhost 透過 token, SSH 確定 git push 權限, SSH 設定可透過 Putty 完成</p>
-<p>2.Replit 透過 connect 功能連結與 Github 的權限</p>
-<p>3.自架主機 s1511.cycu.org, 透過 SSH 與分配埠號</p>
-<br />W7 << <a href='W7.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引</div>
+    <div id="tipue_search_content">W8 << <a href='W8.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>磁力吸引</h1>
+<br />W8 << <a href='W8.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
