--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,6 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite</a></p>
+<p><a href="https://41123145.github.io/cad2023">https://41123145.github.io/cad2023</a></p>
 <p><a href="https://github.com/41123145/cad2023">倉儲</a></p>
 <h1>進度</h1>
 <h2>W4</h2>
