--- a/content/About.html
+++ b/content/About.html
@@ -144,6 +144,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='進度.html'>Next</a> >> 進度<br /><h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite</a></p>
+<p><a href="https://41123145.github.io/cad2023">https://41123145.github.io/cad2023</a></p>
 <p><a href="https://github.com/41123145/cad2023">倉儲</a></p>
 <br /> <a href='進度.html'>Next</a> >> 進度</div>
         
