新增專案1-整體模型

--- a/content/W8.html
+++ b/content/W8.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='磁力吸引.html'>磁力吸引</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a></li></ul><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='專案一.html'>專案一</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,12 +142,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引<br /><h1>W8</h1>
+    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='作業.html'>Next</a> >> 作業<br /><h1>W8</h1>
 <p>維護網站</p>
 <p>1.localhost 透過 token, SSH 確定 git push 權限, SSH 設定可透過 Putty 完成</p>
 <p>2.Replit 透過 connect 功能連結與 Github 的權限</p>
 <p>3.自架主機 s1511.cycu.org, 透過 SSH 與分配埠號</p>
-<br />W7 << <a href='W7.html'>Previous</a> <a href='磁力吸引.html'>Next</a> >> 磁力吸引</div>
+<p></p>
+<br />W7 << <a href='W7.html'>Previous</a> <a href='作業.html'>Next</a> >> 作業</div>
         
     <!-- footer -->
       <div class="container">
