--- a/content/作業.html
+++ b/content/作業.html
@@ -142,10 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='進度.html'>Next</a> >> 進度<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite</a></p>
-<p><a href="https://github.com/41123145/cad2023">倉儲</a></p>
-<br /> <a href='進度.html'>Next</a> >> 進度</div>
+    <div id="tipue_search_content">W8 << <a href='W8.html'>Previous</a> <a href='專案一.html'>Next</a> >> 專案一<br /><h1>作業</h1>
+<br />W8 << <a href='W8.html'>Previous</a> <a href='專案一.html'>Next</a> >> 專案一</div>
         
     <!-- footer -->
       <div class="container">
