新增專案1-底基座

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -18,7 +18,12 @@
 <p>2.Replit 透過 connect 功能連結與 Github 的權限</p>
 <p>3.自架主機 s1511.cycu.org, 透過 SSH 與分配埠號</p>
 <p></p>
+<h1>作業</h1>
 <h2>專案一</h2>
+<p>模型整體</p>
+<p><img alt="" height="191" src="/images/SOLIDWORKS Education Edition - 僅供教學使用 - [專案1模型.SLDPRT] 2024_1_12 上午 02_16_33.png" width="360"/></p>
+<p>底基座</p>
+<p><img alt="" height="196" src="/images/SOLIDWORKS Education Edition - 僅供教學使用 - [零件2 _] 2024_1_12 上午 02_38_35.png" width="291"/></p>
 <p></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
