--- a/config/content.htm
+++ b/config/content.htm
@@ -21,7 +21,9 @@
 <h1>作業</h1>
 <h2>專案一</h2>
 <p>模型整體</p>
-<p><img alt="" height="191" src="/images/SOLIDWORKS Education Edition - 僅供教學使用 - [專案1模型.SLDPRT] 2024_1_12 上午 02_16_33.png" width="360"/></p>
+<p><img alt="" height="294" src="/images/SOLIDWORKS Education Edition - 僅供教學使用 - [專案1模型.SLDPRT] 2024_1_12 上午 02_16_33.png" width="554"/></p>
+<p>底基座</p>
+<p><img alt="" height="353" src="/images/SOLIDWORKS Education Edition - 僅供教學使用 - [零件2 _] 2024_1_12 上午 02_38_35.png" width="525"/></p>
 <p></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
