--- a/content/專案一.html
+++ b/content/專案一.html
@@ -144,7 +144,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content">作業 << <a href='作業.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>專案一</h1>
 <p>模型整體</p>
-<p><img alt="" height="191" src="./../images/SOLIDWORKS Education Edition - 僅供教學使用 - [專案1模型.SLDPRT] 2024_1_12 上午 02_16_33.png" width="360"/></p>
+<p><img alt="" height="294" src="./../images/SOLIDWORKS Education Edition - 僅供教學使用 - [專案1模型.SLDPRT] 2024_1_12 上午 02_16_33.png" width="554"/></p>
+<p>底基座</p>
+<p><img alt="" height="353" src="./../images/SOLIDWORKS Education Edition - 僅供教學使用 - [零件2 _] 2024_1_12 上午 02_38_35.png" width="525"/></p>
 <p></p>
 <br />作業 << <a href='作業.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
