--- a/content/W7.html
+++ b/content/W7.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a></li></ul><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='專案一.html'>專案一</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a></li></ul><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='專案一.html'>專案一</a></li></ul><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
