--- a/content/專案一.html
+++ b/content/專案一.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a></li></ul><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='專案一.html'>專案一</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a></li></ul><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='專案一.html'>專案一</a></li></ul><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,13 +142,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">作業 << <a href='作業.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>專案一</h1>
+    <div id="tipue_search_content">作業 << <a href='作業.html'>Previous</a> <a href='倉儲與網站評分項目.html'>Next</a> >> 倉儲與網站評分項目<br /><h1>專案一</h1>
 <p>模型整體</p>
 <p><img alt="" height="294" src="./../images/SOLIDWORKS Education Edition - 僅供教學使用 - [專案1模型.SLDPRT] 2024_1_12 上午 02_16_33.png" width="554"/></p>
 <p>底基座</p>
 <p><img alt="" height="353" src="./../images/SOLIDWORKS Education Edition - 僅供教學使用 - [零件2 _] 2024_1_12 上午 02_38_35.png" width="525"/></p>
-<p></p>
-<br />作業 << <a href='作業.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<br />作業 << <a href='作業.html'>Previous</a> <a href='倉儲與網站評分項目.html'>Next</a> >> 倉儲與網站評分項目</div>
         
     <!-- footer -->
       <div class="container">
