--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -28,6 +28,7 @@
 <h1><span>倉儲與網站評分項目</span></h1>
 <p><span>倉儲與網站評分項目:</span></p>
 <p><span>A: 是否<span>按照進度明確標示倉儲的改版歷程</span></span></p>
+<p>盡力在追趕了</p>
 <p><span>B: 是否根據<span> </span><span>IPv4 與 IPv6</span><span> </span>網路環境設定進行作法討論</span></p>
 <p><span>C: 是否就<span><span> </span>Replit、s.cycu.org 與 localhost</span><span> </span>情境下對個人與分組倉儲進行設定操作</span></p>
 <p><span>D: 是否就所分配的<span> </span><span>CAD 套件</span>從安裝設定到繪圖提供內容參考</span></p>
